--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,13 @@ ul{
     gap: 40px;
     padding-right: 20px;
 }
+
+button {
+    background-color: #fff;
+    border-radius: 22px;
+    font-size: 16px;
+    display: flex;
+    font-weight: 600;
+    justify-content: center;
+    
+}
