--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 *
 .navbar{
-    height: 120px;
+    height: 160px;
     background-color: rgba(0,20,0.9,0.5);
     color: #fff;
     box-shadow: 0 0 40px rgba(0,0,0,0.5);
@@ -8,6 +8,21 @@
     width: 100%;
     top: 0;
     left: 0;
+}
+.img-logo{
+    height: 50px;
+    padding: 10px;
+    
+}
+.italic{
+    position: relative;
+    top: -10px;
+}
+.login{
+    font-size: 20px;
+    font-weight: 600;
+    cursor: pointer;
+    
 }
 ul{
     list-style: none;
@@ -17,6 +32,12 @@ ul{
     justify-content: flex-end;
     gap: 40px;
     padding-right: 20px;
+}
+li{
+    padding: 10px;
+    font-size: 20px;
+    font-weight: 600;
+    cursor: pointer;
 }
 
 .navbarlogo{
