--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 *
 .navbar{
-    height: 160px;
+    height: 120px;
     background-color: rgba(0,20,0.9,0.5);
     color: #fff;
     box-shadow: 0 0 40px rgba(0,0,0,0.5);
@@ -9,21 +9,6 @@
     top: 0;
     left: 0;
     z-index: 100;
-}
-.img-logo{
-    height: 50px;
-    padding: 10px;
-    
-}
-.italic{
-    position: relative;
-    top: -10px;
-}
-.login{
-    font-size: 20px;
-    font-weight: 600;
-    cursor: pointer;
-    
 }
 ul{
     list-style: none;
@@ -34,12 +19,6 @@ ul{
     gap: 40px;
     padding-right: 20px;
 }
-li{
-    padding: 10px;
-    font-size: 20px;
-    font-weight: 600;
-    cursor: pointer;
-}
 
 .navbarlogo{
     display: flex;
@@ -48,3 +27,12 @@ li{
     padding-right: 20px;
 }
 
+button {
+    background-color: #fff;
+    border-radius: 22px;
+    font-size: 16px;
+    display: flex;
+    font-weight: 600;
+    justify-content: center;
+    
+}
