changed background photo

--- a/src/index.css
+++ b/src/index.css
@@ -67,12 +67,12 @@ button:focus{
 }
 
 .container {
-    background-image: url('assets/background.jpg');
+    background-image: url('assets/background.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     height: 100vh;
-    display: flex;
+    display: 1440px;
 
     
 }
@@ -112,7 +112,7 @@ button:focus{
     min-height: 50px;
     padding: 15px;
     position: absolute;
-    left: 900px;
+    left: 1250px;
     top: 25px;
     height: 25px;
 }
