--- a/src/index.css
+++ b/src/index.css
@@ -117,3 +117,21 @@ button:focus{
     height: 25px;
 }
 
+.content {
+    position: absolute;
+    top: 50%;
+    left: 80%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: #fff;
+    width: 100%;
+    padding: 0 20px;
+    
+}
+
+.btn1 {
+    position: absolute;
+    top: 100%;
+    left: 42%;
+
+}
